Fixed gap for more modal

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -192,6 +192,7 @@ header h1 {
 #modal {
     z-index: 10000;
     position: fixed;
+    top: 0;
     padding: 25px 0px;
     background: #333;
     color: #fff;
